# WABot

./: .gitignore  README.md  db.sqlite3
bot/: urls.py  wabot.py
bot/migrations/: 0001_initial.py
project/: settings.py  urls.py  wsgi.py
src/: manage.py  pyproject.toml
src/WABot/: asgi.py  settings.py  wsgi.py
src/bot/: admin.py  models.py  urls.py  views.py  wabot.py
src/bot/migrations/: 0001_initial.py
